corrected the alignment

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,7 +9,6 @@ body::-webkit-scrollbar  {
 
 body {
   display: flex;
-  align-items: center;
   justify-content: center;
   height: 100vh;
   overflow-y: scroll;
